always use region band in Skia's setClipRegion (tdf#133208)

Do like other VCL backends do.

Change-Id: I64b5d5a2fb131b41c70aa63eaf84022e9aa9fab5